# STEAL

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linux-ci.yml
paper/: 01_intro.tex  01_introduction.tex  02_related_work.tex  03_preliminaries.tex  04_method.tex  05_results.tex  06_discussion.tex  07_conclusion.tex  corl_2022.sty  final_paper.tex  main.tex  main_corl.tex  project_update.tex  refs.bib
scripts/: lasa_load_data.py  multitask_GP.py  shivika01_variational_multi.py  shivika02_gp_sampling.py  shivika_load_data.py  test_gaussian_process.py  varun01_load_data.py  varun02_obstacle_attractor.py  varun03_lasa.py  varun04_gpr.py
steal/: datasets.py  robot.py
steal/datasets/: __init__.py  datasets.py  lasa.py  lasa_GP.py  preprocess.py
steal/gp/: __init__.py  base.py  kernel.py  multi_task.py  scalar.py  variational_multi_output.py
steal/learning/: __init__.py  base.py  context_nets.py  loss.py  taskmap_nets.py  train_utils.py  trainer.py  utils.py
steal/learning/controllers/: __init__.py  metric_networks.py
steal/rmpflow/: __init__.py  rmp_tree.py
steal/rmpflow/controllers/: __init__.py  damping_controllers.py  force_controllers.py  metrics.py  momentum_controllers.py  obstacle_avoidance_controllers.py  potentials.py  target_controllers.py
steal/rmpflow/kinematics/: __init__.py  distance_taskmaps.py  robot.py  robot_kdl.py  taskmaps.py  vector_taskmaps.py
steal/rmpflow/utils/: __init__.py  plot_utils.py
steal/utils/: __init__.py  data.py  plotting.py  robot.py
steal/utils/plotting/: gp.py  rmpflow.py
tests/: test_dataset.py  test_gaussian_process.py  test_gp.py  test_kernel.py  test_metrics.py  test_rmpflow.py  test_robot.py  test_taskmaps.py
tests/fixtures/: lula_franka_gen_fixed_gripper.urdf
urdf/: five_point_planar_robot.urdf  point_planar_robot.urdf
