[tool.poetry]
name = "steal"
version = "1.0.0"
description = "Simultaneous Trajectory Estimation And Learning"
authors = ["Yuri Ahn <yahn41@gatech.edu>", "Shivika Singh <ssingh794@gatech.edu>", "Varun Agrawal <varunagrawal@gatech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pyLasaDataset = "^0.1.1"
#TODO Update once new Pytorch release comes out
torch = [
    { url="https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp38-cp38-linux_x86_64.whl", python=">=3.8,<3.9", markers="sys_platform == 'linux'"},
    { url="https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp39-cp39-linux_x86_64.whl", python=">=3.9,<3.10", markers="sys_platform == 'linux'"},
    { url="https://download.pytorch.org/whl/cpu/torch-1.13.0-cp38-none-macosx_11_0_arm64.whl", python=">=3.8,<3.9", markers = "sys_platform == 'darwin'" },
    { url="https://download.pytorch.org/whl/cpu/torch-1.13.0-cp39-none-macosx_11_0_arm64.whl", python=">=3.9,<3.10", markers = "sys_platform == 'darwin'" },
    { url="https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp38-cp38-win_amd64.whl", python=">=3.8,<3.9", markers = "sys_platform == 'win32'" },
    { url="https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp39-cp39-win_amd64.whl", python=">=3.9,<3.10", markers = "sys_platform == 'win32'" },
]
matplotlib = "^3.6.1"
fastdtw = "^0.3.4"
tensorboardX = "^2.5.1"
scipy = "^1.9.3"
gpytorch = "^1.9.0"
urdf_parser_py = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
ipython = "*"
loguru = "^0.6.0"
pylint = "^2.15.5"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.* deprecated:DeprecationWarning"
]
